# llm-guardrail-pl

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: guardrail.yml
dataset/: dataset.csv
model/: guardrail.py
notebooks/: evaluation.ipynb
notebooks/results/: wyniki_ewaluacji.csv  wyniki_ewaluacji_data_augmented.csv
utils/: data_augmentation.py  dataset.py
