[project]
name = "llm-guardrail-pl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hf-transfer>=0.1.9",
    "huggingface-hub>=1.14.0",
    "ipykernel>=7.2.0",
    "llama-cpp-python>=0.3.23",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
]
